# neurozip

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lint.yaml  publish.yml
neurozip/: __init__.py  api.py
neurozip/dataloaders/: __init__.py  utils.py
neurozip/preprocess/: __init__.py  optical.py
neurozip/types/: __init__.py  nzloader.py  nzpipeline.py  nzpreprocessor.py
